# sonora-connect

./: pyproject.toml  tox.ini
examples/echo/: aclient.py  client.py  echo_pb2.py  echo_pb2_grpc.py
sonora/: aio.py  asgi.py  client.py
tests/: conftest.py  test_asgi_performance.py
