[tool.poetry]
name = "sonora"
version = "0.2.3"
description = "A WSGI and ASGI compatible grpc-web implementation."
authors = ["Alex Stapleton <alexs@prol.etari.at>"]
license = "Apache-2.0"
homepage = "https://github.com/public/sonora"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.76.0"
grpcio-status = "^1.76.0"
urllib3 = "^2.6.1"
aiohttp = "^3.13.2"
async-timeout = "^5.0.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.76.0"
pytest = "^9.0.2"
pytest-mockservers = "^0.6.0"
pytest-asyncio = "^1.3.0"
pytest-benchmark = "^5.2.3"
hypothesis = "^6.148.7"
bjoern = "^3.2.2"
uvicorn = "^0.38.0"
aiohttp = { extras = ["speedups"], version = "^3.7.4" }
tox = "^4.32.0"
daphne = "^4.2.1"
mypy = "^1.19.0"
types-protobuf = "^6.32.1.20251210"
grpc-stubs = "^1.53.0.6"
black = "^25.12.0"
twisted = "^25.5.0"
nonecorn = "^0.17.3"
a2wsgi = "^1.10.10"
pyright = "^1.1.407"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".*_pb2.py$|echotest.py$"

[[tool.mypy.overrides]]
module = ["grpc.*", "urllib3.*", "uvicorn.*", "daphne.*", "bjoern.*"]
ignore_missing_imports = true

[tool.black]
extend-exclude = '''
(
.*_pb2.pyi
)
'''
